objects/Lead.object
<CustomObject>
    <fields>
        <fullName>ASI_LUX_Preferred_Language_2__c</fullName>
        <label>Preferred Language 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Tamil</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Media_Magazine_1__c</fullName>
        <label>Preferred Media / Magazine 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Media_Magazine_2__c</fullName>
        <label>Preferred Media / Magazine 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Vodka_1__c</fullName>
        <label>Preferred Vodka 1</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Vodka_2__c</fullName>
        <label>Preferred Vodka 2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Watch_Brand_Other__c</fullName>
        <label>Preferred Watch Brand (Other)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Watch_Brand__c</fullName>
        <label>Preferred Watch Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A. Lange &amp; Sohne</fullName>
                </value>
                <value>
                    <fullName>Audemars Piguet</fullName>
                </value>
                <value>
                    <fullName>Baume &amp; Mercier</fullName>
                </value>
                <value>
                    <fullName>Blancpain</fullName>
                </value>
                <value>
                    <fullName>Bvlgari</fullName>
                </value>
                <value>
                    <fullName>Breguet</fullName>
                </value>
                <value>
                    <fullName>Breitling</fullName>
                </value>
                <value>
                    <fullName>Cartier</fullName>
                </value>
                <value>
                    <fullName>Chanel</fullName>
                </value>
                <value>
                    <fullName>Chopard</fullName>
                </value>
                <value>
                    <fullName>DeWitt</fullName>
                </value>
                <value>
                    <fullName>Franck Muller</fullName>
                </value>
                <value>
                    <fullName>Girard-Perregaux</fullName>
                </value>
                <value>
                    <fullName>IWC</fullName>
                </value>
                <value>
                    <fullName>Jaeger-LeCoultre</fullName>
                </value>
                <value>
                    <fullName>Maitres du Temps</fullName>
                </value>
                <value>
                    <fullName>Mont Blanc</fullName>
                </value>
                <value>
                    <fullName>Omega</fullName>
                </value>
                <value>
                    <fullName>Panerai</fullName>
                </value>
                <value>
                    <fullName>Patek Phlippe</fullName>
                </value>
                <value>
                    <fullName>Piaget</fullName>
                </value>
                <value>
                    <fullName>Rolex</fullName>
                </value>
                <value>
                    <fullName>Tag Heuer</fullName>
                </value>
                <value>
                    <fullName>Zenith</fullName>
                </value>
                <value>
                    <fullName>Other (please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Wine_1__c</fullName>
        <label>Preferred Wine 1</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Wine_2__c</fullName>
        <label>Preferred Wine 2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Yacht_Brand_Other__c</fullName>
        <label>Preferred Yacht Brand (Other)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Yacht_Brand__c</fullName>
        <label>Preferred Yacht Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Azimut-Benetti</fullName>
                </value>
                <value>
                    <fullName>Ferretti Group</fullName>
                </value>
                <value>
                    <fullName>Sunseeker</fullName>
                </value>
                <value>
                    <fullName>Feadship</fullName>
                </value>
                <value>
                    <fullName>Other (please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Profile__c</fullName>
        <label>Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potential</fullName>
                </value>
                <value>
                    <fullName>First Contact</fullName>
                </value>
                <value>
                    <fullName>Second Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Caucasian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Remarks__c</fullName>
        <label>Remarks</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Social_Media_Account_Info__c</fullName>
        <label>Social Media Account (Facebook)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Spouse_Birthday_Day__c</fullName>
        <label>Spouse Birthday (Day)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Spouse_Birthday_Month__c</fullName>
        <label>Spouse Birthday (Month)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Spouse_Name__c</fullName>
        <label>Spouse Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Street_Number__c</fullName>
        <label>Street Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Talks__c</fullName>
        <label>Talks</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; beverage</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
                <value>
                    <fullName>Leisure</fullName>
                </value>
                <value>
                    <fullName>Motivational</fullName>
                </value>
                <value>
                    <fullName>Religious</fullName>
                </value>
                <value>
                    <fullName>Spiritual</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Tribe_Interest__c</fullName>
        <label>Tribe Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Art - Architecture</fullName>
                </value>
                <value>
                    <fullName>Art - Contemporary</fullName>
                </value>
                <value>
                    <fullName>Art - Design</fullName>
                </value>
                <value>
                    <fullName>Art - Fine</fullName>
                </value>
                <value>
                    <fullName>Formula 1</fullName>
                </value>
                <value>
                    <fullName>Gastronomy</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Luxury Cars</fullName>
                </value>
                <value>
                    <fullName>Luxury Watches</fullName>
                </value>
                <value>
                    <fullName>Polo</fullName>
                </value>
                <value>
                    <fullName>Yachts</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Leisure</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
                <value>
                    <fullName>Entrepreneurship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_VIP_Segment__c</fullName>
        <label>VIP Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>The Authentic (Old Money – Old Generation)</fullName>
                </value>
                <value>
                    <fullName>The Explorer (Old Money – New Generation)</fullName>
                </value>
                <value>
                    <fullName>The Recognition Seeker (Settled Professionals)</fullName>
                </value>
                <value>
                    <fullName>The Flashy (New Money / Fast-tracker professionals)</fullName>
                </value>
                <value>
                    <fullName>Flamboyant Hedonist</fullName>
                </value>
                <value>
                    <fullName>Recognition Seeker</fullName>
                </value>
                <value>
                    <fullName>Inventor</fullName>
                </value>
                <value>
                    <fullName>Authentic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Where_get_alc_knowledge__c</fullName>
        <label>Where do you usually get alc. knowledge?</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Another_Booklet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Another Booklet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Another_Floor_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Another Floor Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Another_Material_Gondola__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Another Material Gondola</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Another_Material_Tailor_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Another Material Tailor Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Another_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Another Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Corporate_Name__c</fullName>
        <label>Corporate Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe_the_sales_flow__c</fullName>
        <label>Describe the sales flow</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extra_Comments__c</fullName>
        <label>Extra Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Guest_Name__c</fullName>
        <label>Guest Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guest</label>
        <referenceTo>Visitas__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_salesman_for_consumers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has salesman for consumers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_training_for_consumers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has training for consumers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRB_Booklet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRB Booklet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRB_Floor_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRB Floor Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRB_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRB Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRD_Material_Gondola__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRD Material Gondola</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRD_Material_Tailor_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRD Material Tailor Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <label>Responsibility</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnpj__c</fullName>
        <externalId>true</externalId>
        <label>CNPJ</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Lead&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Info__c</fullName>
        <label>Original Source Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Type__c</fullName>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postalcode__c</fullName>
        <label>Postal Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>street__c</fullName>
        <label>Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>cnpj__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualificado</value>
        </filters>
        <label>Todos Prospects Abertos</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
</CustomObject>